@@ -18,9 +18,6 @@ Build-Depends: debhelper (>= 9.20160114),
                libgirepository1.0-dev (>= 0.9.5),
                gobject-introspection (>= 0.9.12-4~),
                dbus,
-               dbus-x11,
-               xvfb,
-               xauth,
                curl,
                valac
 Build-Depends-Indep: libglib2.0-doc
