@@ -23,7 +23,7 @@ CHECK_HOME = $(CURDIR)/debian/tmp/home
 common-build-arch common-build-indep:: debian/stamp-makefile-check
 debian/stamp-makefile-check: debian/stamp-makefile-build
 	mkdir -p $(CHECK_HOME)
-	env HOME=$(CHECK_HOME) XDG_RUNTIME_DIR=$(CHECK_HOME) xvfb-run -s -noreset $(MAKE) check VERBOSE=1
+	env HOME=$(CHECK_HOME) XDG_RUNTIME_DIR=$(CHECK_HOME) dbus-run-session -- $(MAKE) check VERBOSE=1
 	touch $@
 
 makefile-clean::
